--- a/Lesson_6/Polynom/index.html
+++ b/Lesson_6/Polynom/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<script src="script.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Document</title>
 </head>
 <body>
-	
-
-
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
